# beerec-variants

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: ident.rs  lib.rs  nested_meta.rs  string.rs
src/rename/: inner.rs  outer.rs
tests/expand/: enum_unit.expanded.rs  enum_unit.rs  enum_unit_display.expanded.rs  enum_unit_display.rs  enum_unit_from_str.expanded.rs  enum_unit_from_str.rs  enum_unit_rename.expanded.rs  enum_unit_rename.rs  enum_unit_rename_abbr.expanded.rs  enum_unit_rename_abbr.rs  enum_unit_rename_inner.expanded.rs  enum_unit_rename_inner.rs  enum_unit_rename_inner_outer.expanded.rs  enum_unit_rename_inner_outer.rs  enum_unit_rename_outer.expanded.rs  enum_unit_rename_outer.rs  enum_unit_rename_rename_abbr.expanded.rs  enum_unit_rename_rename_abbr.rs  enum_unit_skip.expanded.rs  enum_unit_skip.rs
tests/expand/serde/: enum_unit_deserialize.expanded.rs  enum_unit_deserialize.rs  enum_unit_serialize.expanded.rs  enum_unit_serialize.rs
tests/fail/: enum_named.rs  enum_named.stderr  enum_newtype.rs  enum_newtype.stderr  enum_tuple.rs  enum_tuple.stderr  struct.rs  struct.stderr  union.rs  union.stderr
